--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -20,7 +21,20 @@
          </nav>
       
         <main>
-      
+            <div class="content">
+                <h1>Portfolio</h1>
+                <ul id="portfolio">
+                    <li>
+                        <a href="projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
+                      </li>
+                      <li>
+                        <a href="projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+                      </li>
+                      <li>
+                        <a href="projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+                      </li>
+                </ul>
+              </div>
         </main>
     </div>
   </body>
