completed bouncing box project

--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -32,7 +32,7 @@
 	<!-- HTML for the box -->
 	<div class="box">?</div>
 
-	<script>
+	<script moveBoxTo(300); / / Moves the box to the x- position 300 >
 		(function () {
 			'use strict'
 			/* global jQuery */
@@ -66,7 +66,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+             var positionX = 0; // TODO 2
+			 var points = 0; // TODO 4
+			 var speed = 10; // TODO 5
 
 
 			/* 
@@ -76,6 +78,17 @@
 			*/
 			function update() {
 
+				//TODO 6
+				if (positionX > boardWidth) {
+					speed *= -1;
+				}
+
+				// TODO 7
+				if(positionX < 0) {
+					speed *= -1;
+				}
+                positionX += speed; // TODO 5
+				moveBoxTo(positionX); // TODO 1
 
 			};
 
@@ -85,7 +98,11 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-
+                positionX = 0; // TODO 3
+				points++; // TODO 4
+				changeBoxText(points); // TODO 4
+				speed += 3; // TODO 5
+				speed = 3 * points + 10; // TODO 8
 
 			};
 
